# ChangeLog for dev-ruby/actionpack
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.77 2008/05/13 13:37:31 armin76 Exp $

  13 May 2008; Raúl Porcel <armin76@gentoo.org> actionpack-2.0.2.ebuild:
  ia64 stable wrt #221309

  12 May 2008; Markus Rothe <corsair@gentoo.org> actionpack-2.0.2.ebuild:
  Stable on ppc64; bug #221309

  11 May 2008; Ferris McCormick <fmccor@gentoo.org> actionpack-2.0.2.ebuild:
  Sparc stable --- part of Bug #221309 --- Good for about 5 months.

  11 May 2008; Markus Meier <maekke@gentoo.org> actionpack-2.0.2.ebuild:
  x86 stable, bug #221309

  11 May 2008; Hans de Graaff <graaff@gentoo.org> actionpack-2.0.2.ebuild:
  Stable on amd64, bug #221309

*actionpack-2.0.2 (18 Dec 2007)

  18 Dec 2007; Hans de Graaff <graaff@gentoo.org> +actionpack-2.0.2.ebuild:
  Version bump for Rails 2.0.2

  01 Dec 2007; Christoph Mende <angelos@gentoo.org>
  actionpack-1.13.6.ebuild:
  Stable on amd64 wrt bug #200159

  01 Dec 2007; Hans de Graaff <graaff@gentoo.org> -actionpack-1.13.2.ebuild,
  -actionpack-1.13.3.ebuild, -actionpack-1.13.4.ebuild:
  Remove old vulnerable versions

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> actionpack-1.13.6.ebuild:
  ia64/sparc stable wrt security #200159

  27 Nov 2007; Brent Baude <ranger@gentoo.org> actionpack-1.13.6.ebuild:
  Marking actionpack-1.13.6 ppc64 for bug 200159

  26 Nov 2007; Brent Baude <ranger@gentoo.org> actionpack-1.13.6.ebuild:
  Marking actionpack-1.13.6 ppc for bug 200159

  26 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  actionpack-1.13.6.ebuild:
  stable x86, security bug 200159

*actionpack-1.13.6 (25 Nov 2007)

  25 Nov 2007; Hans de Graaff <graaff@gentoo.org> +actionpack-1.13.6.ebuild:
  Version bump for Rails 1.2.6, security bug #200159

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> actionpack-1.13.5.ebuild:
  amd64 stable

  18 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>